# cookiecutter-rust-lib

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Cargo.toml
{{cookiecutter.project_name}}/examples/: intro.rs
{{cookiecutter.project_name}}/src/: lib.rs
{{cookiecutter.project_name}}/tests/: example.rs
