[package]
authors      = ["Harrison Totty <harrisongtotty@gmail.com>"]
description  = "{{ cookiecutter.project_desc }}"
edition      = "2018"
exclude      = [".*"]
include      = ["/examples", "/src"]
license-file = "LICENSE"
name         = "{{ cookiecutter.project_name }}"
publish      = false
readme       = "README.md"
version      = "0.1.0"
